# cargo-vibe

./: Cargo.toml  LICENSE  readme.md
src/: main.rs
