[package]
name = "cargo-vibe"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shadlock0133/cargo-vibe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = "6.1.0"
cargo_metadata = "0.15.1"
clap = { version = "4.0.18", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
