[package]
name = "cargo-vibe"
version = "0.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shadlock0133/cargo-vibe"
description = "Cargo x Buttplug.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = "6.3.0"
futures = { version = "0.3.25", default-features = false }
tokio = { version = "1.23.0", features = ["full"] }
